MAPRHADOOP-84: Illegal reflective access of ShimLoader when using jdk11 for containers