@@ -504,7 +504,7 @@ public interface MRJobConfig {
   /** Command line arguments passed to the MR app master.*/
   public static final String MR_AM_COMMAND_OPTS =
     MR_AM_PREFIX+"command-opts";
-  public static final String DEFAULT_MR_AM_COMMAND_OPTS = "-Xmx1024m";
+  public static final String DEFAULT_MR_AM_COMMAND_OPTS = "-Xmx1024m --add-opens java.base/java.lang=ALL-UNNAMED";
 
   /** Admin command opts passed to the MR app master.*/
   public static final String MR_AM_ADMIN_COMMAND_OPTS =
